# Helldroid

./: LICENSE  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/com/sdk/helldroid/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: main.cpp
app/src/main/cpp/features/dynamic/RootDetect/: RootDetect.cpp
app/src/main/cpp/features/dynamic/antiDebug/: antiDebug.cpp  antiDebug.h
app/src/main/cpp/features/dynamic/antiHooking/: antiHooking.h
app/src/main/cpp/features/dynamic/antiVirtualDevice/: antiVirtualDevice.h  deviceData.h
app/src/main/cpp/features/static/ARThook/: ARThook.cpp  ARThook.h
app/src/main/cpp/shared/: obfuscate.h  utils.cpp
app/src/main/cpp/syscalls/: x86_64.S
app/src/main/java/com/sdk/helldroid/: Helldroid.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/sdk/helldroid/: ExampleUnitTest.java
buildSrc/: build.gradle.kts
buildSrc/src/main/kotlin/: HellCryptClassVisitorFactory.kt  MainActivityClassVisitorFactory.kt  hellCrypt.kt  hellCryptOptions.kt  hellEncryptor.kt
buildSrc/src/main/kotlin/codeGen/: HellCryptClassVisitor.kt  MainActivityClassVisitor.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
hellCrypt/: build.gradle.kts  proguard-rules.pro
hellCrypt/src/androidTest/java/com/lib/hellcrypt/: ExampleInstrumentedTest.java
hellCrypt/src/main/java/com/lib/hellcrypt/: Stub.java  config.java  hellDecrypt.java  hellcrypt.java
hellCrypt/src/main/java/sun/misc/: Unsafe.java
hellCrypt/src/test/java/com/lib/hellcrypt/: ExampleUnitTest.java
helldroid/: build.gradle.kts  proguard-rules.pro
helldroid/src/androidTest/java/com/lib/helldroid/: ExampleInstrumentedTest.java
helldroid/src/main/cpp/: CMakeLists.txt  main.cpp
helldroid/src/main/cpp/features/dynamic/AntiFrida/: AntiFrida.cpp  AntiFrida.h
helldroid/src/main/cpp/features/dynamic/RootDetect/: RootDetect.h
helldroid/src/main/cpp/features/dynamic/antiHooking/: antiHooking.cpp
helldroid/src/main/cpp/features/dynamic/antiMemDump/: antiMemDump.cpp  antiMemDump.h
helldroid/src/main/cpp/features/dynamic/antiVirtualDevice/: antiVirtualDevice.cpp
helldroid/src/main/cpp/shared/: utils.h
helldroid/src/main/cpp/syscalls/: HellLibC.cpp  HellLibC.h  arm64.S
helldroid/src/main/java/com/lib/helldroid/: Helldroid.java
helldroid/src/test/java/com/lib/helldroid/: ExampleUnitTest.java
